# xmc-1-rest-api

./: Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: xmc1RestApi.service
src/: commands.rs  main.rs  zzmain.rs
xmc-remote/: package-lock.json  package.json
xmc-remote/public/: index.html  manifest.json
xmc-remote/src/: App.tsx
xmc-remote/src/components/: AppBar.tsx  PowerCard.tsx  SourceCard.tsx  StatusCard.tsx  VolumeCard.tsx
xmc-remote/src/services/: api.tsx
