[package]
name = "xmc1_rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21.2", features = [
    "net",
    "io-util",
    "macros",
    "rt-multi-thread",
] }
rocket = { version = "0.5.0", features = ["json"] }
